--- a/index.html
+++ b/index.html
@@ -3,82 +3,281 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Açaiteria e Sorveteria Fino Sabor - Cardápio Online</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <title>Açaiteria Fino Sabor - Açaí e Sabores Tropicais!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <style>
+        body {
+            padding-top: 56px; /* Para compensar a navbar fixa */
+            font-family: 'Poppins', sans-serif; /* Fonte mais moderna e alegre */
+            background-color: #fcf8f0; /* Fundo suave, quase creme */
+        }
+        .navbar-brand {
+            font-weight: bold;
+            font-size: 1.6rem;
+            color: #fff; /* Branco para o texto da marca */
+        }
+        .navbar-nav .nav-link {
+            color: rgba(255, 255, 255, 0.8);
+        }
+        .navbar-nav .nav-link.active,
+        .navbar-nav .nav-link:hover {
+            color: #fff;
+        }
+        .bg-tropical-purple {
+            background-color: #6a0dad; /* Roxo vibrante do açaí */
+        }
+        .bg-tropical-green {
+            background-color: #3cb371; /* Verde vibrante */
+        }
+        .text-tropical-yellow {
+            color: #ffd700; /* Amarelo dourado */
+        }
+        .btn-tropical-purple {
+            background-color: #6a0dad;
+            border-color: #6a0dad;
+            color: white;
+        }
+        .btn-tropical-purple:hover {
+            background-color: #5a009d;
+            border-color: #5a009d;
+        }
+        .btn-tropical-green {
+            background-color: #3cb371;
+            border-color: #3cb371;
+            color: white;
+        }
+        .btn-tropical-green:hover {
+            background-color: #2e9c60;
+            border-color: #2e9c60;
+        }
+        .hero-section {
+            background: linear-gradient(rgba(106, 13, 173, 0.6), rgba(60, 179, 113, 0.6)), url('https://images.unsplash.com/photo-1596773229712-42111d441604?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center;
+            background-size: cover;
+            padding: 120px 0;
+            color: white;
+            text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
+        }
+        .hero-section h1 {
+            font-size: 4.5rem;
+            margin-bottom: 25px;
+            font-weight: 900;
+        }
+        .hero-section p {
+            font-size: 1.8rem;
+            font-weight: 300;
+        }
+        .section-heading {
+            color: #6a0dad; /* Roxo vibrante para títulos */
+            margin-bottom: 50px;
+            font-weight: bold;
+        }
+        .card-img-top {
+            height: 220px;
+            object-fit: cover;
+            border-bottom: 5px solid #ffd700; /* Borda amarela chamativa */
+        }
+        .card {
+            border: none;
+            border-radius: 15px;
+            overflow: hidden;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+            background-color: #ffffff;
+        }
+        .card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.15);
+        }
+        .carousel-item img {
+            height: 500px; /* Altura do carrossel na página principal */
+            object-fit: cover;
+            filter: brightness(0.85); /* Escurece um pouco para o texto aparecer melhor */
+        }
+        .carousel-caption h5 {
+            font-size: 3rem;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.9);
+            font-weight: bold;
+        }
+        .carousel-caption p {
+            font-size: 1.5rem;
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.9);
+        }
+        .bg-light-tropical {
+            background-color: #e6ffe6; /* Verde bem clarinho */
+        }
+        .toast-header {
+            background-color: #ffd700 !important; /* Amarelo para o header do toast */
+            color: #6a0dad !important; /* Roxo para o texto do header */
+            font-weight: bold;
+        }
+        .toast-body {
+            color: #333;
+        }
+    </style>
 </head>
 <body>
 
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <div class="container">
-                <a class="navbar-brand" href="#">Açaiteria e Sorveteria Fino Sabor</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#hero">Início</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#cardapios">Cardápios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#promocoes">Promoções</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#quem-somos">Quem Somos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contato">Contato</a>
-                        </li>
-                    </ul>
-                </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-tropical-purple fixed-top shadow-sm">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">Açaiteria Fino Sabor</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#hero">Início</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#sabores">Nossos Sabores</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#quem-somos">Sobre Nós</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="cardapio.html">Cardápio Completo</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contato">Contato</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
 
     <main>
-        <section id="hero" class="d-flex align-items-center justify-content-center text-white bg-dark" style="min-height: 100vh;">
-            <div class="container text-center">
-                <h1 class="display-3">Açaiteria e Sorveteria Fino Sabor</h1>
-                <p class="lead">Delícias que você vai amar.</p>
-                <a href="#cardapios" class="btn btn-primary btn-lg mt-3">Ver Nossos Cardápios</a>
+        <section id="hero" class="hero-section d-flex align-items-center text-center">
+            <div class="container">
+                <h1 class="display-1 fw-bold">Açaiteria Fino Sabor</h1>
+                <p class="lead">A energia e o sabor do açaí, com um toque tropical que você só encontra aqui!</p>
+                <a href="#sabores" class="btn btn-tropical-green btn-lg mt-4 shadow-lg rounded-pill px-5 py-3">Explore Nossos Sabores!</a>
             </div>
         </section>
 
-        <section id="cardapios" class="py-5">
+        <section id="sabores" class="py-5 bg-light-tropical">
             <div class="container">
-                <h2 class="text-center mb-5">Nossos Cardápios</h2>
-                <ul class="nav nav-pills justify-content-center mb-4" id="pills-tab" role="tablist">
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="pills-entradas-tab" data-bs-toggle="pill" data-bs-target="#pills-entradas" type="button" role="tab" aria-controls="pills-entradas" aria-selected="true">Entradas</button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="pills-principais-tab" data-bs-toggle="pill" data-bs-target="#pills-principais" type="button" role="tab" aria-controls="pills-principais" aria-selected="false">Pratos Principais</button>
-                    </li>
-                    <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="pills-bebidas-tab" data-bs-toggle="pill" data-bs-target="#pills-bebidas" type="button" role="tab" aria-controls="pills-bebidas" aria-selected="false">Bebidas</button>
-                    </li>
-                    </ul>
-                <div class="tab-content" id="pills-tabContent">
-                    <div class="tab-pane fade show active" id="pills-entradas" role="tabpanel" aria-labelledby="pills-entradas-tab">
-                        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-                            <div class="col">
-                                <div class="card h-100 shadow-sm">
-                                    <img src="https://via.placeholder.com/400x250" class="card-img-top" alt="Nome do Prato">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Copos de Açai</h5>
-                                        <p class="card-text">Descrição deliciosa da entrada, com ingredientes e destaques.</p>
-                                        <p class="card-text"><strong>R$ 10,00</strong></p>
-                                    </div>
-                                </div>
+                <h2 class="text-center section-heading mb-5">Nossas Delícias Tropicais</h2>
+                <div id="saboresCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#saboresCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#saboresCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#saboresCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner rounded-4 shadow-lg">
+                        <div class="carousel-item active">
+                            <img src="https://images.unsplash.com/photo-1596773229712-42111d441604?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Açaí Tradicional">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Açaí Tradicional com Frutas</h5>
+                                <p>Açaí puro, banana, morango e granola. Um clássico que nunca erra!</p>
                             </div>
-                            <div class="col">
-                                <div class="card h-100 shadow-sm">
-                                    <img src="https://via.placeholder.com/400x250" class="card-img-top" alt="Nome do Prato">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Peso</h5>
-                                        <p class="card-text">Descrição deliciosa da entrada, com ingredientes e destaques.</p>
-                                        <p class="card-text"><strong>R$ 50,00
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://images.unsplash.com/photo-1551228256-f68285903960?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Açaí com Leite Ninho">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Açaí com Leite Ninho e Nutella</h5>
+                                <p>A combinação perfeita de cremosidade e doçura para os amantes de Ninho.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://images.unsplash.com/photo-1597405230238-89c099499898?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Creme de Cupuaçu">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Creme de Cupuaçu com Castanhas</h5>
+                                <p>Experimente o sabor exótico da Amazônia em uma tigela refrescante.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#saboresCarousel" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Anterior</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#saboresCarousel" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Próximo</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+
+        <section id="quem-somos" class="py-5">
+            <div class="container">
+                <h2 class="text-center section-heading mb-5">Nossa Essência Tropical</h2>
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <img src="https://images.unsplash.com/photo-1582236940081-36631481b238?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="img-fluid rounded-4 shadow-lg" alt="Nossa Açaiteria">
+                    </div>
+                    <div class="col-md-6 mt-4 mt-md-0">
+                        <p class="lead">Na Açaiteria Fino Sabor, a paixão pelo açaí e pelos sabores do Brasil nos move!</p>
+                        <p>Desde 2021, nos dedicamos a trazer o açaí mais puro e os cremes de frutas mais exóticos, combinados com acompanhamentos frescos e deliciosos. Nosso objetivo é proporcionar uma experiência única de sabor e bem-estar, com um toque de alegria tropical em cada tigela.</p>
+                        <a href="cardapio.html" class="btn btn-outline-tropical-purple mt-3 rounded-pill px-4">Conheça Nosso Cardápio Completo</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="modal fade" id="modalContato" tabindex="-1" aria-labelledby="modalContatoLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content rounded-4">
+                    <div class="modal-header bg-tropical-purple text-white">
+                        <h5 class="modal-title" id="modalContatoLabel">Fale Conosco!</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <label for="modalNome" class="form-label">Seu Nome</label>
+                                <input type="text" class="form-control" id="modalNome" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="modalEmail" class="form-label">Seu Email</label>
+                                <input type="email" class="form-control" id="modalEmail" placeholder="seuemail@exemplo.com" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="modalMensagem" class="form-label">Mensagem</label>
+                                <textarea class="form-control" id="modalMensagem" rows="3" placeholder="Sua mensagem..." required></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-tropical-green w-100 rounded-pill">Enviar Mensagem</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </main>
+
+    <footer class="bg-dark text-white text-center py-4 mt-5" id="contato">
+        <div class="container">
+            <p class="mb-2">Açaiteria Fino Sabor &copy; 2025. Todos os direitos reservados.</p>
+            <p class="mb-0">
+                Endereço: Praça desembargador Celso Sales, 328 - Centro |
+                Telefone: (XX) 9XXXX-XXXX |
+                <a href="#" class="text-tropical-yellow" data-bs-toggle="modal" data-bs-target="#modalContato">Envie uma mensagem</a>
+            </p>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const toastHtml = `
+                <div class="toast-container position-fixed bottom-0 end-0 p-3">
+                    <div id="welcomeToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                        <div class="toast-header bg-tropical-green text-white">
+                            <strong class="me-auto"><i class="bi bi-tropical-storm"></i> Bem-vindo(a) à Fino Sabor!</strong>
+                            <small>Agora</small>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="toast" aria-label="Close"></button>
+                        </div>
+                        <div class="toast-body">
+                            Prepare-se para uma explosão de sabores tropicais!
+                        </div>
+                    </div>
+                </div>
+            `;
+            document.body.insertAdjacentHTML('beforeend', toastHtml);
+
+            const welcomeToast = document.getElementById('welcomeToast');
+            const toastBootstrap = bootstrap.Toast.getOrCreateInstance(welcomeToast);
+            toastBootstrap.show();
+        });
+    </script>
+</body>
+</html>
