--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
 
 <body>
     <div class="container menu-container">
-        <h1 class="menu-title">🍦 Fino Sabor - Cardápio! 💜❤️</h1>
-
+        <h1 class="menu-title">🍦❤️ Cardápio! 💜🍦</h1>
+        
         <h2 class="menu-section-heading">Monte Seu Açaí</h2>
         <p class="text-center item-description">Escolha o tamanho e personalize com nossos cremes e recheios exclusivos!</p>
         <div class="row justify-content-center">
