--- a/index.html
+++ b/index.html
@@ -51,12 +51,15 @@
         .menu-title {
             color: var(--menu-purple-dark);
             font-weight: 900;
-            font-size: 3.5rem; /* Tamanho padrão para telas maiores */
+            font-size: 3.5rem;
+            /* Tamanho padrão para telas maiores */
             text-align: center;
             margin-bottom: 40px;
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-            word-break: break-word; /* Ajuda a quebrar palavras longas */
-            hyphens: auto; /* Ajuda na hifenização para quebrar palavras */
+            word-break: break-word;
+            /* Ajuda a quebrar palavras longas */
+            hyphens: auto;
+            /* Ajuda na hifenização para quebrar palavras */
         }
 
         .menu-section-heading {
@@ -198,39 +201,74 @@
         }
 
         /* ** Media Queries para Responsividade ** */
-        @media (max-width: 992px) { /* Para tablets e telas menores que desktop */
+        @media (max-width: 992px) {
+
+            /* Para tablets e telas menores que desktop */
             .menu-title {
-                font-size: 3rem; /* Um pouco menor */
+                font-size: 3rem;
+                /* Um pouco menor */
             }
         }
 
-        @media (max-width: 768px) { /* Para a maioria dos celulares e tablets pequenos */
+        @media (max-width: 768px) {
+
+            /* Para a maioria dos celulares e tablets pequenos */
             .menu-title {
-                font-size: 2.2rem; /* Reduzido para encaixar melhor */
-                line-height: 1.2; 
+
+                /* Reduzido para encaixar melhor */
+                line-height: 1.2;
+                color: var(--menu-purple-dark);
+                font-weight: 900;
+                font-size: 3.5rem;
+                /* Tamanho padrão para telas maiores */
+                text-align: center;
+                margin-bottom: 40px;
+                text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+                word-break: break-word;
+                /* Ajuda a quebrar palavras longas */
+                hyphens: auto;
+                /* Ajuda na hifenização para quebrar palavras */
+                white-space: normal;
+                /* Garante que o texto quebre linha */
+                text-wrap: balance;
+                /* Tenta equilibrar as linhas de texto (funcionalidade mais nova) */
             }
+
             .menu-section-heading {
                 font-size: 1.8rem;
             }
-            .acai-option .price, .acai-kg .price-kg {
+
+            .acai-option .price,
+            .acai-kg .price-kg {
                 font-size: 2rem;
             }
-            .acai-option .description, .acai-kg .description-kg {
+
+            .acai-option .description,
+            .acai-kg .description-kg {
                 font-size: 1rem;
             }
-            .options-list li, .item-card .item-name, .item-card .item-price {
+
+            .options-list li,
+            .item-card .item-name,
+            .item-card .item-price {
                 font-size: 0.95rem;
             }
         }
 
-        @media (max-width: 576px) { /* Para celulares menores (modo retrato) */
+        @media (max-width: 576px) {
+
+            /* Para celulares menores (modo retrato) */
             .menu-title {
-                font-size: 1.8rem; /* Ainda menor para telas muito estreitas */
-                padding: 0 10px; /* Adiciona um pequeno padding horizontal para não "colar" nas bordas */
+                font-size: 1.8rem;
+                /* Ainda menor para telas muito estreitas */
+                padding: 0 10px;
+                /* Adiciona um pequeno padding horizontal para não "colar" nas bordas */
                 line-height: 1.3;
             }
+
             .menu-container {
-                padding: 20px 15px; /* Reduz o padding do container em telas muito pequenas */
+                padding: 20px 15px;
+                /* Reduz o padding do container em telas muito pequenas */
             }
         }
     </style>
@@ -241,7 +279,8 @@
         <h1 class="menu-title">🍦🍦 Açaiteria Fino Sabor - Cardápio! 💜❤️</h1>
 
         <h2 class="menu-section-heading">Monte Seu Açaí</h2>
-        <p class="text-center item-description">Escolha o tamanho e personalize com nossos cremes e recheios exclusivos!</p>
+        <p class="text-center item-description">Escolha o tamanho e personalize com nossos cremes e recheios exclusivos!
+        </p>
         <div class="row justify-content-center">
             <div class="col-md-6 col-lg-4">
                 <div class="acai-option">
